# ytdlp-tray

./: .gitattributes  .gitignore  README.md  build.ps1  config.yaml  pyproject.toml  youtube_downloader.user.js
src/ytdlp_tray/: main.py
